--- a/q/274358.html
+++ b/q/274358.html
@@ -26,24 +26,18 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>079</td><td>JavaScript Node.js</td><td>240723T200514Z</td><td><a href="https://codegolf.stackexchange.com/questions/274358/double-dequer-sort/274367#274367">l4m2</a></td></tr>
+<tr d-ix="0"><td>078</td><td>JavaScript Node.js</td><td>240723T200514Z</td><td><a href="https://codegolf.stackexchange.com/questions/274358/double-dequer-sort/274367#274367">l4m2</a></td></tr>
 <tr d-ix="1"><td>026</td><td>Charcoal</td><td>240725T125118Z</td><td><a href="https://codegolf.stackexchange.com/questions/274358/double-dequer-sort/274434#274434">Neil</a></td></tr>
 <tr d-ix="2"><td>020</td><td>05AB1E</td><td>240724T080558Z</td><td><a href="https://codegolf.stackexchange.com/questions/274358/double-dequer-sort/274390#274390">Kevin Cr</a></td></tr>
 <tr d-ix="3"><td>014</td><td>Nekomata + e</td><td>240724T030317Z</td><td><a href="https://codegolf.stackexchange.com/questions/274358/double-dequer-sort/274380#274380">alephalp</a></td></tr>
 <tr d-ix="4"><td>226</td><td>Elisp</td><td>240723T150252Z</td><td><a href="https://codegolf.stackexchange.com/questions/274358/double-dequer-sort/274359#274359">Samuel J</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 79 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 78 bytes</h1>
 
-<pre class="lang-javascript prettyprint-override"><code>f=([c,...x],i,...z)=&gt;c?f(x,i,...z,c)|f(x,i,c,...z):i?!z.some(t=&gt;i&gt;(i=t)):f(z,1)
+<pre class="lang-javascript prettyprint-override"><code>f=(x,g=i=4)=&gt;x.reverse().map((c,i)=&gt;c&lt;Math.max(...x)?++g:x[i]=0)|i?f(x,--i):!g
 </code></pre>
-<p><a href="https://tio.run/##VY1NDoIwEIX3ngJ3bTI2lj@VpHAQwoJUasYgNUAMId69Tq0sTNrOzPvem97bVzvpEZ/zYbDXzjmjWK1BCLE0gL6uXJW6Mmz5jaD5O0w64AKr/Som@@jYrEosGaqZ88KwFSR3xo4MI2uielfLBuiBGBJIfZtSE0NQj7AdP5KBSAYS8s2YkZAHc0Y0JSH53tyDsJnWbWmfpY@C3QsysBOR/F84wwX@Iw3Xdphs34ne3hhCZBhy7j4" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
-<p>Brute-force</p>
-<h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 80 bytes</h1>
-
-<pre class="lang-javascript prettyprint-override"><code>f=(x,i=4)=&gt;x.reverse().map(g=(c,i)=&gt;c&lt;Math.max(...x)?++g:x[i]=0)&amp;&amp;i?f(x,i-1):!!g
-</code></pre>
-<p><a href="https://tio.run/##VY/RDoIgGIXvewq7cbD@mJZaucgn6AmYF87AaCVOnePt6SfmRRuwn/OdcxivZmmmdtTDvO/NQzqnOLGgeUb5zbJRLnKcJKHs0wyk46QFjaC93pv5iZoljDFLq92uK63QNU9oHOtK@Yp9SsvttnPKjERHRkViI9Ia8IADHCHzY4bDAYKawLr8FQ1IckihWI05CkUw50gzFI6/XXgQmrFuTfssPhTsXkgDOyEp/oUzXOA/UtPW9JN5S/Y2HRH4S11DpIim1H0B" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
-<p>-2 bytes from Neil(may extra -1 or -2 if weaker output format)</p>
+<p><a href="https://tio.run/##VY9LDoIwEIb3ngJ3bRwakYePWD2BJyAsCLY4BikBQrrw7ji1YUHSNtPvfzR9l1M5VD12Y9iap5pnLZmFWqJMuLxZ0atJ9YNiXHzKjrEKkHB1fZTji4hlQgjL77tdfbE5FnLPv3jX1BCGyC/betamZxgYHeSbPCqADjhADIkbExoO4OkeluWuZCAlhQiyxZgSyLw5JTUhEP935gTfTHVL2mXpIW93IPLakZRsDU5whnWk4JVpB9Mo0Zia5fRHLCDQDDmffw" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+<p>-2 bytes from Neil(may extra -1<s> or -2 </s>if weaker output format)</p>
 <p>Polynomial time</p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 26 bytes</h1>
