--- a/q/274389.html
+++ b/q/274389.html
@@ -26,12 +26,12 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>043</td><td>JavaScript ES6</td><td>240724T081140Z</td><td><a href="https://codegolf.stackexchange.com/questions/274389/reduce-a-string-up-to-idempotency/274391#274391">Arnauld</a></td></tr>
-<tr d-ix="1"><td>082</td><td>Python 3.8 prerelease</td><td>240724T095658Z</td><td><a href="https://codegolf.stackexchange.com/questions/274389/reduce-a-string-up-to-idempotency/274399#274399">Jitse</a></td></tr>
-<tr d-ix="2"><td>030</td><td>Charcoal</td><td>240725T083936Z</td><td><a href="https://codegolf.stackexchange.com/questions/274389/reduce-a-string-up-to-idempotency/274432#274432">Neil</a></td></tr>
-<tr d-ix="3"><td>105</td><td>Setanta</td><td>240725T071331Z</td><td><a href="https://codegolf.stackexchange.com/questions/274389/reduce-a-string-up-to-idempotency/274430#274430">bb94</a></td></tr>
-<tr d-ix="4"><td>029</td><td>Wolfram Language Mathematica</td><td>240724T225458Z</td><td><a href="https://codegolf.stackexchange.com/questions/274389/reduce-a-string-up-to-idempotency/274424#274424">att</a></td></tr>
-<tr d-ix="5"><td>017</td><td>sed 4.2.2</td><td>240725T052036Z</td><td><a href="https://codegolf.stackexchange.com/questions/274389/reduce-a-string-up-to-idempotency/274428#274428">Digital </a></td></tr>
+<tr d-ix="0"><td>016</td><td>sed 4.2.2</td><td>240725T052036Z</td><td><a href="https://codegolf.stackexchange.com/questions/274389/reduce-a-string-up-to-idempotency/274428#274428">Digital </a></td></tr>
+<tr d-ix="1"><td>043</td><td>JavaScript ES6</td><td>240724T081140Z</td><td><a href="https://codegolf.stackexchange.com/questions/274389/reduce-a-string-up-to-idempotency/274391#274391">Arnauld</a></td></tr>
+<tr d-ix="2"><td>082</td><td>Python 3.8 prerelease</td><td>240724T095658Z</td><td><a href="https://codegolf.stackexchange.com/questions/274389/reduce-a-string-up-to-idempotency/274399#274399">Jitse</a></td></tr>
+<tr d-ix="3"><td>030</td><td>Charcoal</td><td>240725T083936Z</td><td><a href="https://codegolf.stackexchange.com/questions/274389/reduce-a-string-up-to-idempotency/274432#274432">Neil</a></td></tr>
+<tr d-ix="4"><td>105</td><td>Setanta</td><td>240725T071331Z</td><td><a href="https://codegolf.stackexchange.com/questions/274389/reduce-a-string-up-to-idempotency/274430#274430">bb94</a></td></tr>
+<tr d-ix="5"><td>029</td><td>Wolfram Language Mathematica</td><td>240724T225458Z</td><td><a href="https://codegolf.stackexchange.com/questions/274389/reduce-a-string-up-to-idempotency/274424#274424">att</a></td></tr>
 <tr d-ix="6"><td>008</td><td>Nekomata</td><td>240725T021308Z</td><td><a href="https://codegolf.stackexchange.com/questions/274389/reduce-a-string-up-to-idempotency/274425#274425">alephalp</a></td></tr>
 <tr d-ix="7"><td>009</td><td>QuadR ≡</td><td>240724T085533Z</td><td><a href="https://codegolf.stackexchange.com/questions/274389/reduce-a-string-up-to-idempotency/274394#274394">Ad&#225;</a></td></tr>
 <tr d-ix="8"><td>014</td><td>Brachylog</td><td>240724T223135Z</td><td><a href="https://codegolf.stackexchange.com/questions/274389/reduce-a-string-up-to-idempotency/274422#274422">Unrelate</a></td></tr>
@@ -43,21 +43,31 @@
 <tr d-ix="14"><td>010</td><td>Japt</td><td>240724T093257Z</td><td><a href="https://codegolf.stackexchange.com/questions/274389/reduce-a-string-up-to-idempotency/274397#274397">Shaggy</a></td></tr>
 <tr d-ix="15"><td>008</td><td>05AB1E legacy</td><td>240724T083148Z</td><td><a href="https://codegolf.stackexchange.com/questions/274389/reduce-a-string-up-to-idempotency/274393#274393">Kevin Cr</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>JavaScript (ES6), 43 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed 4.2.2</a>, 16</h1>
+<pre><code>:
+s/(.+)\1/\1/
+t
+</code></pre>
+<ul>
+<li>-1 byte thanks to @Neil .</li>
+</ul>
+<p><a href="https://tio.run/##NYaxCsIwGIT3e4tsSjAx6qBSGjo4dOqikMFNgymiv5AMccmjG/@Cct99d9Ffa90j6pmS87PRDFKtyMjMG0JYSC01jOSwV@xSCo7BMw@k4NO0l@F0C3C961yH/rcuw@y2y/WGgVJKTP0fi4HugmvRUNsQtR96pZGesS4OXw" rel="nofollow noreferrer" title="sed 4.2.2 – Try It Online">Try it online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1>JavaScript (ES6), 43 bytes</h1>
 <p><em>-2 thanks to <a href="https://codegolf.stackexchange.com/users/76323/l4m2">@l4m2</a></em></p>
 
 <pre class="lang-javascript prettyprint-override"><code>f=s=&gt;s==(s=s.replace(/(.+)\1/,&quot;$1&quot;))?s:f(s)
 </code></pre>
 <p><a href="https://tio.run/##bZLBToMwGMfve4quMQECFqcedFshO3jYaRdNSCYHwrqh4jpoY2aMPIGJF4/6Hj7PXsBHwA5oC05o4fv39/3b7yPcR08Ri/O7DT9e0wUpyyVm2GMYmwwzlJNNGsXEdE1kW7cD14FHA2hZPhsuTWaVo3kPgDmAEKjLaavQqfkWtrlWiuul//lzhysleb/vQ821kNx2bRcqrmLFB7a4oeQqbvHTDpdK8qIoWucXB/VfJ0SMR1hzGWrOE8I15wc8nt2sEnW@VpIH02ASTGDD96rrn@oEZ68mf/oLOt9fK9X/5cXJ2bkYsOq/UrDFEUL9/YSVv3p3/A33JUd@t74ZfeiL2XCtJB9Tb0yp19Q/rqOWX8BMZGSZByueNQlhL@yhJc2vojgxzTlgPHcA2W5IzMkChBbAHngRW6SEg5wwgIH4rXlujcRaTNeMpgSldGVWPpHg1FlY7@ED4@f7fff5IZ4GGAJj9/VmCP@rNSp/AQ" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, 82 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, 82 bytes</h1>
 
 <pre class="lang-python prettyprint-override"><code>lambda s:(n:=len(s))==[s:=s.replace((x:=s[i%n:i%~n])+x,x)for i in range(n**3)]or s
 </code></pre>
 <p><a href="https://tio.run/##XY9fb4IwFMXf@RSlibEVhn/YgyMW46NPvmwJiTMLcyhkWCrtEnzhq7PbFpkZtNxzfvc09IqbyiseLkXdndh7V6aXz68UyYjwiJUZJ5JSxvYyYjKoM1Gmx4yQBty@GPGoGLX8QL3Gb@ipqlGBCo7qlJ8zwieTkB6Ayc50uPDRh4@qH6Uzl1QQqepAirJQQAX8aEZp5CCb1DFmUsN9ZAAHCkHGeEx9RO4xSuFMnUlkHoZOuqOZqAuuiO4wpoO@TtEOY/QUI4wd3FjVaPmob72@gXHdtXVQHexNvam1UB089@C1XgsNFn9gYVDbtha0YF7zDNbFAqMcrPJMDUxZdty9nXNLrHRwsk02ycYyrQFtH5lFST9HogeZvyxn4TOs/kbGAg@CwNXbYqgDWt9RoKfdVd8u7B4OzsGrqqpi@MS2swJhYGwa/@AV6PU6UFC/" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
 <p>-14 bytes thanks to xnor</p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 30 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 30 bytes</h1>
 <pre><code>Ｗ⌈ΦＥθ⌈ΦＥλ✂θμλ¹№θ×²μκ≔⪫⪪θ×²ιιθθ
 </code></pre>
 <p><a href="https://tio.run/##bUzLCsIwELz7FXvcQDzotaUgggehINQfCCHYxU3aJq0KId8ek6PgwAzMg9Gj8npSnPN7JDaAvfqQ3SxeiFfji51xkfAnZQkDkza1thKKPQgh4Txtbq3ZnawJeCylqJDwLAqnEOjh8DqRw2Fm@p1S3VHhIprdzVN9Ek3ObYypa2NKXd6/@As" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Explanation:</p>
@@ -71,24 +81,17 @@
 </code></pre>
 <p>Output the finally reduced string.</p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://try-setanta.ie" rel="nofollow noreferrer">Setanta</a>, 105 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://try-setanta.ie" rel="nofollow noreferrer">Setanta</a>, 105 bytes</h1>
 <pre><code>gniomh(s){le t idir(0,fad@s)le j idir(1,fad@s+1)le i idir(0,j){t=cuid@s(i,j)s=athchuir@s(t+t,t)}toradh s}
 </code></pre>
 <p><a href="https://try-setanta.ie/editor/EhEKBlNjcmlwdBCAgIDIiL2cCw" rel="nofollow noreferrer">Try on try-setanta.ie</a></p>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, <s>31</s> 29 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, <s>31</s> 29 bytes</h1>
 <pre><code>f[a___,b__,b__,c___]=f[a,b,c]
 </code></pre>
 <p><a href="https://tio.run/##TdDBaoNAEAbgu0@hYyktbkxje2ghNRtKDzmlYAqCiGzERGl1RbdgLr66nXWsDe4y//@B4FgKlWelUEUqhuEUiSRJ2HG6KZb4FZEdWRoPH01Rqche@CfO33LRiFRlTcttBuYdMNtjcA/xLef8IN@7usnatpAVDxS@dg7q70JFN0HaFLXaVfWPImdgQDwAmAvfBMwdpU7H63yZ8gWLZW2o4TTAWTpLqjgNWDn4UNdBg/cP3kh93xP0WA55hqckGJMB@EvUbIos3X@ecxKKBoS7cBtuyXRG2l0bUTjtEepFVi/PD49PeKYvGiu667qWvsQ4Z9r8kau33csvC@@EczNgLf21lD45FvgF" rel="nofollow noreferrer" title="Wolfram Language (Mathematica) – Try It Online">Try it online!</a></p>
 <p>Input <code>[characters...]</code>. Return the characters of the reduced string, wrapped in <code>f</code>.</p>
 <p><a href="https://reference.wolfram.com/language/ref/NonCommutativeMultiply.html" rel="nofollow noreferrer"><code>NonCommutativeMultiply</code> (<code>**</code>)</a> is a conveniently <a href="https://reference.wolfram.com/language/ref/Flat.html" rel="nofollow noreferrer"><code>Flat</code></a> <a href="https://codegolf.stackexchange.com/a/82740">undefined operator</a>. Unfortunately, it needs to be <a href="https://reference.wolfram.com/language/ref/Unprotect.html" rel="nofollow noreferrer"><code>Unprotect</code></a>ed before we can add a definition. <a href="https://tio.run/##TZBNa8JAEIbv@yvMpEgbY6y2hxY0rkgPHtSCCgERCSGaUJMNyaToJX89zjqplf2Y531gYGcTH6Mw8TEO/HqTZrnCMEAJC2tqzS2o/f3esugamWZ7uyOsD6OFSqcqSUqkrt9wXp4wzk4X8Z3HKW7NrnuQchr5uR9gmBfStKH1DLY5sOEFdm0p5Vp9nbM8LIpYpXKF1HZcZacYt0@rII8znKVZiextELCrAVpdtwXEZ6azxke@NHyhYBhjTlQFdHqdHkeqAvodWpw1aDH4F4ObqqqKRUVhHYW0ExY3EkA/hneH7ILl5hixYRTgzbyJN2GnmdTs0bHymjk8PUj/8@P17Z1286JbJO84jqEPa6p3Nf5Tjp52qX4MOo28JwFD5Q6VctlTgCs" rel="nofollow noreferrer" title="Wolfram Language (Mathematica) – Try It Online">Try it online!</a></p>
-</div>
-<div id="pu5" class="pu"><h1><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed 4.2.2</a>, 17</h1>
-<pre><code>:
-s/(.+)\1+/\1/
-t
-</code></pre>
-<p><a href="https://tio.run/##NYaxCsIwGIT3e4tsSjAx6qBSGjo4dOqikKGbBiOiv5AMccmjG/@Cct99d9Ffat0j6pmS89FIPRqNVCsyMvOGEBZSSw0jOewVu5SCY/DMAyn4NO15OF0DXO8616H/rcswu@1yvWGglBJT/8dioLvgWjTUNkTth17pRs9YF4cv" rel="nofollow noreferrer" title="sed 4.2.2 – Try It Online">Try it online!</a></p>
 </div>
 <div id="pu6" class="pu"><h1><a href="https://github.com/AlephAlpha/Nekomata" rel="nofollow noreferrer">Nekomata</a>, 8 bytes</h1>
 <pre><code>ʷ{JYᵗƶ¿j
