--- a/q/274389.html
+++ b/q/274389.html
@@ -68,7 +68,11 @@
 <h1>Reflection</h1>
 <p>Although I only have two versions of this answer I am splitting the reflection into three based on three <em>potential</em> solutions to this challenge.</p>
 <h2>Parser version</h2>
-<p>I think that the parser version is alright. I was annoyed by the operator precedence between <code>(~&lt;)</code> and <code>(#|)</code>/<code>(++)</code> in the original version of the answer, but I'm not sure it's actually wrong in general, and now it's no longer a problem.</p>
+<p>I am happy with the parser version. I was annoyed by the operator precedence between <code>(~&lt;)</code> and <code>(#|)</code>/<code>(++)</code> in the original version of the answer, but I'm not sure it's actually wrong in general, and now it's no longer a problem.</p>
+<p>In the interest in coming up with <em>something</em> to improve here:</p>
+<ul>
+<li>Maybe <code>yyc&lt;sk</code> could have a builtin? I think this idiom of &quot;apply a parser repeatedly to substrings until reaching a fixed point&quot; could come up again. I just really kind of don't like making more parser consumers.</li>
+</ul>
 <h2>Regex version</h2>
 <p>I don't think I could reasonably do this with regex right now, since I haven't implemented back-referencing yet. This is just yet another push to do that.</p>
 <h2>Non-parser version</h2>
