--- a/q/274061.html
+++ b/q/274061.html
@@ -26,13 +26,13 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>055</td><td>Python 3.8 prerelease</td><td>240710T235814Z</td><td><a href="https://codegolf.stackexchange.com/questions/274061/o-y-u-or-and-or/274067#274067">squarero</a></td></tr>
-<tr d-ix="1"><td>027</td><td>AWK vIGNORECASE=1</td><td>240718T130032Z</td><td><a href="https://codegolf.stackexchange.com/questions/274061/o-y-u-or-and-or/274242#274242">corvus_1</a></td></tr>
-<tr d-ix="2"><td>047</td><td>Bash</td><td>240711T080538Z</td><td><a href="https://codegolf.stackexchange.com/questions/274061/o-y-u-or-and-or/274076#274076">Themooni</a></td></tr>
-<tr d-ix="3"><td>nan</td><td>Nibbles</td><td>240712T151449Z</td><td><a href="https://codegolf.stackexchange.com/questions/274061/o-y-u-or-and-or/274131#274131">Dominic </a></td></tr>
-<tr d-ix="4"><td>023</td><td>QuadR i</td><td>240711T062145Z</td><td><a href="https://codegolf.stackexchange.com/questions/274061/o-y-u-or-and-or/274072#274072">Ad&#225;</a></td></tr>
-<tr d-ix="5"><td>035</td><td>JavaScript ES6</td><td>240710T200347Z</td><td><a href="https://codegolf.stackexchange.com/questions/274061/o-y-u-or-and-or/274064#274064">Arnauld</a></td></tr>
-<tr d-ix="6"><td>062</td><td>Python</td><td>240711T130805Z</td><td><a href="https://codegolf.stackexchange.com/questions/274061/o-y-u-or-and-or/274081#274081">pajonk</a></td></tr>
+<tr d-ix="0"><td>060</td><td>Python</td><td>240711T130805Z</td><td><a href="https://codegolf.stackexchange.com/questions/274061/o-y-u-or-and-or/274081#274081">pajonk</a></td></tr>
+<tr d-ix="1"><td>055</td><td>Python 3.8 prerelease</td><td>240710T235814Z</td><td><a href="https://codegolf.stackexchange.com/questions/274061/o-y-u-or-and-or/274067#274067">squarero</a></td></tr>
+<tr d-ix="2"><td>027</td><td>AWK vIGNORECASE=1</td><td>240718T130032Z</td><td><a href="https://codegolf.stackexchange.com/questions/274061/o-y-u-or-and-or/274242#274242">corvus_1</a></td></tr>
+<tr d-ix="3"><td>047</td><td>Bash</td><td>240711T080538Z</td><td><a href="https://codegolf.stackexchange.com/questions/274061/o-y-u-or-and-or/274076#274076">Themooni</a></td></tr>
+<tr d-ix="4"><td>nan</td><td>Nibbles</td><td>240712T151449Z</td><td><a href="https://codegolf.stackexchange.com/questions/274061/o-y-u-or-and-or/274131#274131">Dominic </a></td></tr>
+<tr d-ix="5"><td>023</td><td>QuadR i</td><td>240711T062145Z</td><td><a href="https://codegolf.stackexchange.com/questions/274061/o-y-u-or-and-or/274072#274072">Ad&#225;</a></td></tr>
+<tr d-ix="6"><td>035</td><td>JavaScript ES6</td><td>240710T200347Z</td><td><a href="https://codegolf.stackexchange.com/questions/274061/o-y-u-or-and-or/274064#274064">Arnauld</a></td></tr>
 <tr d-ix="7"><td>110</td><td>Go</td><td>240711T151242Z</td><td><a href="https://codegolf.stackexchange.com/questions/274061/o-y-u-or-and-or/274086#274086">bigyihsu</a></td></tr>
 <tr d-ix="8"><td>060</td><td>Lexurgy</td><td>240711T150341Z</td><td><a href="https://codegolf.stackexchange.com/questions/274061/o-y-u-or-and-or/274085#274085">bigyihsu</a></td></tr>
 <tr d-ix="9"><td>033</td><td>Ruby</td><td>240711T081015Z</td><td><a href="https://codegolf.stackexchange.com/questions/274061/o-y-u-or-and-or/274077#274077">int 21h </a></td></tr>
@@ -43,7 +43,15 @@
 <tr d-ix="14"><td>026</td><td>Retina 0.8.2</td><td>240711T001547Z</td><td><a href="https://codegolf.stackexchange.com/questions/274061/o-y-u-or-and-or/274069#274069">Neil</a></td></tr>
 <tr d-ix="15"><td>049</td><td>Google Sheets</td><td>240710T202030Z</td><td><a href="https://codegolf.stackexchange.com/questions/274061/o-y-u-or-and-or/274065#274065">doubleun</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, <s> 66 </s> 55 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, <s>64</s> <s>62</s> 60 bytes</h1>
+<p><em>Edit: -2 bytes thanks to <a href="https://codegolf.stackexchange.com/users/20260/xnor">@xnor</a> and -2 bytes thanks to <a href="https://codegolf.stackexchange.com/users/123279/squareroot12621">@squareroot12621</a>.</em></p>
+<pre class="lang-python prettyprint-override"><code>lambda s:re.match(&quot;^h?[oó8]|^11$&quot;,s,2)and&quot;u&quot;or&quot;o&quot;
+import re
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=fZPBSsQwEIYP3vYpyuihhVWpC1JE8SBCPVUQ8bDdhbhNbSXJlLQ5CL6Jl4IoeN6b1z7F-jQutq4x3WYuIfkyP__MJC_vxVOVoahf07P4TVXpfrA6ZYTfJ8QpTyQ94KRaZC7Ms_MpNstg9jz3_T0Yl-Mjj4gEFKAEhFHOC5SVI2mr8bVzWMhcVC5McRYL8EbtNnWBMPq4zpQIzjo8z9l18I_6P6e_0aO-zk16bM3lhFlyw-ZDIoUhfJHhAhmp6FbTdyiTK3EpHlheZmDSa9LVulVZWU3fWmn4L7lPaYmDFYWKW1yFzSenyeZChzsOsZgqY6rIqCmndLmllPlGz8TBZGKORqf9Hij9SfR6oNEMpTB6oNNIkmHT0U1kcYVWV5GVhtj33P6bum7Xbw" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p>Port of <a href="https://codegolf.stackexchange.com/a/274064/55372">@Arnauld's JavaScript regex answer</a>.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, <s> 66 </s> 55 bytes</h1>
 <p><em>-11 bytes by realizing that strings like</em> <code>'H8'</code> <em>are undefined behavior.</em></p>
 
 <pre class="lang-python prettyprint-override"><code>lambda s:'ou'[s.strip('hH')[:1]in[*'oóOÓ8']or'11'==s]
@@ -51,12 +59,12 @@
 <p>The list unpacking could be removed (-3 bytes) if strings matching <code>/^[hH]*$/g</code> could output <code>'u'</code> instead of <code>'o'</code>.</p>
 <p><a href="https://tio.run/##fdK/T4QwFAfw3b@C1KFwg0lDYsglTBcTnGpijAMwVOlZLqWPvMLg3@Ff4XybK38YGsUTy9Fu7afv5dsf7WunwMRJi@M@LUYtmqdKBHZLoae5vbId1m1IVUajfMvK2uQbCsORD28JLQEpYzRNbTm2WJsuJDmUhSHRxc90HxKh5UGYCoEEXyOKgssA/pR9r/6OhbK5u3rtrW2E9tRmwzuCJGu8U/AMWnTybOhHwOrW3JgXXVtFXL0T01nPdu69oR@8mv0rXqq0QNa18aTKho9GVqcNE09OCpP3zquClm67ft7uiFif@rmcxLH7NHNd3kE//xLEowrQOHcwV45iPTS/555U4E3FvZrBMvP4CQ" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://www.gnu.org/software/gawk/" rel="nofollow noreferrer">AWK</a> <code>-vIGNORECASE=1</code>, 27 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://www.gnu.org/software/gawk/" rel="nofollow noreferrer">AWK</a> <code>-vIGNORECASE=1</code>, 27 bytes</h1>
 <pre><code>$0=/^11$|^h?[oó8]/?&quot;u&quot;:&quot;o&quot;
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=LY6xCsIwGIT3e4zgKhoEKYKISLEuRhRxKC0EG42a9ododXHwPVwEcXC1m459Ct_GiMLxwcHHceerPGweIavuB_2hGPu97sRvcxZdbvluUfVelXq7FnNeOca6E1JZeFGtw3LWYsR-xl-8vE_SqLXMEkvg4JyjiVQaBOXdkkJP05yM3CnMyCaDzM-WZrXVGEnn55giyF3UlhxTh_KZqoRARn1LYe3KNa_RgOe2oclmBC2shJgIEAQC-h35AA" rel="nofollow noreferrer">Attempt This Online!</a></p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://www.gnu.org/software/bash/" rel="nofollow noreferrer">Bash</a>, 47 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://www.gnu.org/software/bash/" rel="nofollow noreferrer">Bash</a>, 47 bytes</h1>
 <p>-2 bytes by @Fmbalbuena with golfed regex</p>
 <pre class="lang-bash prettyprint-override"><code>grep -qiE '^h?[oó8]|^11$'&lt;&lt;&lt;$1&amp;&amp;echo u||echo o
 </code></pre>
@@ -68,7 +76,7 @@
                                 &amp;&amp;echo u||echo o #if match, output u, o otherwise.
 </code></pre>
 </div>
-<div id="pu3" class="pu"><h1><a href="http://golfscript.com/nibbles/index.html" rel="nofollow noreferrer">Nibbles</a>, 41 nibbles (20.5 bytes)</h1>
+<div id="pu4" class="pu"><h1><a href="http://golfscript.com/nibbles/index.html" rel="nofollow noreferrer">Nibbles</a>, 41 nibbles (20.5 bytes)</h1>
 <pre><code>? + ? `D256 o/-.$`)$&quot;H&quot;$ ==$&quot;11&quot; &quot;u&quot; &quot;o&quot; 384fd3
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m708LzMpKSe1eMGCpaUlaboWN_XtFbQV7BUSXIxMzRTy9XX1VBI0VZQ8lFQUbG1VlAwNlRSUSoE4X0nB2MIkLcUYog2qe020UozS4c3lOTFKSrELuSCCAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
@@ -87,7 +95,7 @@
                               &quot;o&quot; #    output &quot;o&quot;
 </code></pre>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://github.com/abrudz/QuadRS" rel="nofollow noreferrer">QuadR</a> <code>i</code>, <s>24</s> 23 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://github.com/abrudz/QuadRS" rel="nofollow noreferrer">QuadR</a> <code>i</code>, <s>24</s> 23 bytes</h1>
 <p>−1 thanks to Fmbalbuena.</p>
 
 <pre class="lang-none prettyprint-override"><code>^(11$|h?[oó8]).*
@@ -104,20 +112,12 @@ o
 <p>then we replace it and anything that follows it (<code>.+</code>) with a &quot;u&quot;.</p>
 <p>Everything else (<code>.+</code>) we replace with an &quot;o&quot;.</p>
 </div>
-<div id="pu5" class="pu"><h1>JavaScript (ES6), 35 bytes</h1>
+<div id="pu6" class="pu"><h1>JavaScript (ES6), 35 bytes</h1>
 <p><em>-2 thanks to <a href="https://codegolf.stackexchange.com/users/106959/fmbalbuena">Fmbalbuena</a></em></p>
 
 <pre class="lang-javascript prettyprint-override"><code>s=&gt;&quot;ou&quot;[+/^h?[oó8]|^11$/i.test(s)]
 </code></pre>
 <p><a href="https://tio.run/##jdLPasIwGADwu09RPnZokVmKMLzoDmPQnToYY4euQmijraT5RtLs5At59rZrH6wTUdGmMckpJD@@f8mG/BKZi@qneeRY0G417@R8AaggHYfL8jnFdj/LtssoegirSUNl48sg63LkEhmdMFz7kGIGwej6aOUDYXRDeCEQvMMKAi8MPeyj6Hh5XiYUXTMDenKJVBNmjxS3O4EULOqlxBwZaei99r5QFG/8la9ZJUswoHdymtG9dMqlvU8XFN@EMiIqEayothcet381LS7urG4YfPNUDXyhw1ZLoPQEeyGqSwaDmk2n2svraGB@Sv@NYEclCt6fn44SQaztJR@JvXB0KTxxQTEOdNf9Aw" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
-</div>
-<div id="pu6" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, <s>64</s> 62 bytes</h1>
-<p><em>Edit: -2 bytes thanks to <a href="https://codegolf.stackexchange.com/users/20260/xnor">@xnor</a>.</em></p>
-<pre class="lang-python prettyprint-override"><code>lambda s:re.match(&quot;^h?[oó]|^11$|^8&quot;,s,2)and&quot;u&quot;or&quot;o&quot;
-import re
-</code></pre>
-<p><a href="https://ato.pxeger.com/run?1=fZPBSsQwEIYP3vYpyuihhVWpC1IE9SBCPVUQ8dBuIW5TU2kzJU0Owr6Jl4IoeN6b1z6FPo2LrWtNt5lLSL7Mzz8zyfNb-SQZ8volPY1elUz3vc-znBT3CbGqE0EPCiIXzIaYnYfYrObL2HX3lrEH02p65BCegAIUgDDJihKFtARtVb52DkuRcWlDiPOIgzNpt6kNJKeP60yBYK3DcaxdC_-o-3P6GwPq9rlOj425BckNuX7zLpDCGL5guMCcSLrV9B2K5Ipf8oc8qxjo9Jp0tW5VVkbTt0bq_0seUlrhaEW-Kgyu_OajoMnmQoc7DhEPlTZVzKkup_pyKyGyjZ6OvdlMH02fDnug-k9i0IMeZSi41oM-DQQZNx3cBAZXaHQVGKmPQ8_tv6nrdv0G" rel="nofollow noreferrer">Attempt This Online!</a></p>
-<p>Port of <a href="https://codegolf.stackexchange.com/a/274064/55372">@Arnauld's JavaScript regex answer</a>.</p>
 </div>
 <div id="pu7" class="pu"><h1><a href="https://go.dev" rel="nofollow noreferrer">Go</a>, 110 bytes</h1>
 <pre class="lang-go prettyprint-override"><code>import.&quot;regexp&quot;
