--- a/q/274342.html
+++ b/q/274342.html
@@ -26,9 +26,9 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>065</td><td>sed 4.2.2 E</td><td>240724T163625Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274414#274414">Jordan</a></td></tr>
-<tr d-ix="1"><td>087</td><td>Python</td><td>240724T043605Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274385#274385">Mukundan</a></td></tr>
-<tr d-ix="2"><td>103</td><td>Zsh</td><td>240724T174928Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274418#274418">GammaFun</a></td></tr>
+<tr d-ix="0"><td>092</td><td>Zsh</td><td>240724T174928Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274418#274418">GammaFun</a></td></tr>
+<tr d-ix="1"><td>065</td><td>sed 4.2.2 E</td><td>240724T163625Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274414#274414">Jordan</a></td></tr>
+<tr d-ix="2"><td>087</td><td>Python</td><td>240724T043605Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274385#274385">Mukundan</a></td></tr>
 <tr d-ix="3"><td>040</td><td>Uiua</td><td>240724T170308Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274416#274416">Marcos G</a></td></tr>
 <tr d-ix="4"><td>120</td><td>Google Sheets</td><td>240724T111238Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274403#274403">z..</a></td></tr>
 <tr d-ix="5"><td>092</td><td>Python</td><td>240724T062044Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274386#274386">Albert.L</a></td></tr>
@@ -40,7 +40,32 @@
 <tr d-ix="11"><td>053</td><td>Retina 0.8.2</td><td>240723T094301Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274346#274346">Neil</a></td></tr>
 <tr d-ix="12"><td>137</td><td>Python 3.8 prerelease</td><td>240723T091424Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274343#274343">Jitse</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed 4.2.2</a> <code>-E</code>, 65 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.zsh.org/" rel="nofollow noreferrer">Zsh</a>, <s>103</s> 92 bytes</h1>
+<p>Saved <strong>11 bytes</strong> using <code>r[1]=</code> to remove the first character of <code>$r</code> and <code>l[-1]=</code> to remove the last character of <code>$l</code>.</p>
+
+<pre class="lang-sh prettyprint-override"><code>IFS=\|
+read l r
+for m;case $m {\&lt;)r=$l[-1]$r l[-1]=;;\&gt;)l+=$r[1] r[1]=;;*)l[-1]=;}
+&lt;&lt;&lt;$l\|$r
+</code></pre>
+<p><s><a href="https://tio.run/##VY8xT8MwEIVn/CtOqiXHQCuFETteipCY6dZkcKmrIDmtdDYLcX57OBuqhicPvrvvnd59h34@VbKa317fmzYxdPYIHpCdLgiD@rDBAR9gbLXEhvv9uu44gs/f@nH91CnVGukfGo77ugNCRnyuJ6Xu5YKZmNaa@zZxnGXZfIABLlAxses/A9CzEF2ISdyJlc5aFRmqd71NeSiY2H5hSOR252PBaWqW0pnP0IJJfz5qhRQtxqtT32Q01elK3SAmXpx30YH1vkT7J0PO7CMslST6NzA16EjIJx@Aj1XYbOQwzT8" rel="nofollow noreferrer" title="Zsh – Try It Online">Try it online!</a></s>
+<a href="https://tio.run/##VY9BawIxEIXPza8YMJCNpYLnnc2lUui53lwPsUZWyFaYpJc6/vbtJFW0j5AwM98Lb37SMB0a20zvbx9dz4qC30MEUocTwdh@@hRAj3Du0VKn4@ZludUE9e3atnc2PneaNsstlEtac3sdXhQi6tizpsnW73YwwgkaZdbDMYEcDzmkzObJzLBoVuWkXg@ey9Ao8/pNicUdvvYVl6l7FBa@QA8MX33SSpw95ZsT73IoNd@oO6TMKsSQA/gYa7R/cuIsPsG4JsG/wNKQJaGsvAN9btJiYcfL9As" rel="nofollow noreferrer" title="Zsh – Try It Online">Try it online!</a></p>
+<p>Takes string on stdin and motions as argv.</p>
+<pre class="lang-sh prettyprint-override"><code>IFS=\|    # set internal field separator for reading string
+read l r  # read string from stdin, splitting on $IFS into $l and $r
+for m;    # motions as separate arguments
+  case $m {
+    \&lt;)
+      r=$l[-1]$r l[-1]= ;;
+    \&gt;)
+      l+=$r[1] r[1]= ;;
+    *)     # catchall, rather than escaping \#
+      l[-1]=
+  }
+&lt;&lt;&lt;$l\|$r
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed 4.2.2</a> <code>-E</code>, 65 bytes</h1>
 <p>The input string and sequence of moves should be separated by a tab. Code contains literal tab characters.</p>
 <pre><code>:
 s/(.)?\|(.* )&lt;/|\1\2/
@@ -50,7 +75,7 @@ t
 </code></pre>
 <p><a href="https://tio.run/##VY1BCsIwEEXXySkC2bSCDXUpIV2oN3CZTaABC6GRznQ3ZzdOWkR9zOr/xx@IYylnCabp2sFT0x1Eaw353p8MpzVphy11xve0p93H1NU0Eku5PyZQfEFhBCShbUVvOHlZF6C8qDiPWy/cL3YXuAfCsOCu2C/OymtMEaMKKfH2H44FSbzI39wrP3HKM5Tj7Q0" rel="nofollow noreferrer" title="sed 4.2.2 – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, <sup><s>100</s> <s>96</s></sup> 87 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, <sup><s>100</s> <s>96</s></sup> 87 bytes</h1>
 <p><em>-4 bytes thanks to <a href="https://codegolf.stackexchange.com/users/20260/xnor">@xnor</a></em><br />
 <em>-9 bytes thanks to <a href="https://codegolf.stackexchange.com/users/122251/no-comment">@no comment</a></em></p>
 <pre class="lang-python prettyprint-override"><code>def f(s,o):
@@ -58,29 +83,6 @@ t
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=XVDNSsMwHD-3TxEyRhPtSicIUtrCUATBg-DAQ9dDsSlNqWloMpiQN_Gyi77TLj6JB_PR6fRHCOnvq__k7YO_ynZg-_37VjaLq8NTTRrQIBEOOPFBM4yAAsrAkIjipdqhOOzO6fxyscRJXGYi4gNHXaIPlNVkhwIVYFzQ-UUep1121LW7nOo_TWNPGbGlnDAUm_9oUMZDQHYcZFaPRiFHyhGOBO-pRHAjFzmA2HpFqLNCO3Vo0oONDEKwdLoT9R5NJb6jt1LTxZko7WeDNGGbIsKeh5og7OJ8pEyiAt6u7u5hCODD6vERlgWEUTdQZlIYZJkZttTqCYvdLfeHr3VLBdCrApIIqTxvlhrMLHLP03dZt5Uyqn-9HYXSz0JYbd1eforUuY3pxKP8iRBKVqN0ufQXeWpT6uj6Mfk3pCeSgKrv9VTe7A9ynbQx32ieHiS107ouf8UG2ZLR9Cj5P2tgbdI9wjc" rel="nofollow noreferrer">Attempt This Online!</a></p>
 <p>Modifies the input in-place</p>
-</div>
-<div id="pu2" class="pu"><h1><a href="https://www.zsh.org/" rel="nofollow noreferrer">Zsh</a>, 103 bytes</h1>
-
-<pre class="lang-sh prettyprint-override"><code>IFS=\|
-read l r
-for m;case $m {\&lt;)r=$l[-1]$r l=$l[1,-2];;\&gt;)l+=$r[1] r=${r:1};;*)l=$l[1,-2];}
-&lt;&lt;&lt;$l\|$r
-</code></pre>
-<p><a href="https://tio.run/##VY8xT8MwEIVn/CtOqiXHQCuFETteipCY6dZkcKmrIDmtdDYLcX57OBuqhicPvrvvnd59h34@VbKa317fmzYxdPYIHpCdLgiD@rDBAR9gbLXEhvv9uu44gs/f@nH91CnVGukfGo77ugNCRnyuJ6Xu5YKZmNaa@zZxnGXZfIABLlAxses/A9CzEF2ISdyJlc5aFRmqd71NeSiY2H5hSOR252PBaWqW0pnP0IJJfz5qhRQtxqtT32Q01elK3SAmXpx30YH1vkT7J0PO7CMslST6NzA16EjIJx@Aj1XYbOQwzT8" rel="nofollow noreferrer" title="Zsh – Try It Online">Try it online!</a></p>
-<p>Takes string on stdin and motions as argv.</p>
-<pre class="lang-sh prettyprint-override"><code>IFS=\|    # set internal field separator for reading string
-read l r  # read string from stdin, splitting on $IFS into $l and $r
-for m;    # motions as separate arguments
-  case $m {
-    \&lt;)
-      r=$l[-1]$r l=$l[1,-2] ;;
-    \&gt;)
-      l+=$r[1] r=${r:1};;
-    *)     # catchall, rather than escaping \#
-      l=$l[1,-2]
-  }
-&lt;&lt;&lt;$l\|$r
-</code></pre>
 </div>
 <div id="pu3" class="pu"><h1><a href="https://www.uiua.org/" rel="nofollow noreferrer">Uiua</a>, 40 bytes</h1>
 <pre><code>⍜⊙↻⊂@|∧⊃(+-⊸¬=@&gt;|⍜⊙↻↘=@#⊙-⊙1):⊙:⊙▽⊃⊗⊸≠@|
