--- a/q/263135.html
+++ b/q/263135.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>123</td><td>R</td><td>240725T145127Z</td><td><a href="https://codegolf.stackexchange.com/questions/263135/print-this-diamond-gone-beautifully-wrong/274437#274437">David Jo</a></td></tr>
+<tr d-ix="0"><td>nan</td><td>R</td><td>240725T145127Z</td><td><a href="https://codegolf.stackexchange.com/questions/263135/print-this-diamond-gone-beautifully-wrong/274437#274437">David Jo</a></td></tr>
 <tr d-ix="1"><td>067</td><td>Raku Perl 6 rakudo</td><td>240723T221122Z</td><td><a href="https://codegolf.stackexchange.com/questions/263135/print-this-diamond-gone-beautifully-wrong/274375#274375">bb94</a></td></tr>
 <tr d-ix="2"><td>117</td><td>Setanta</td><td>240723T214409Z</td><td><a href="https://codegolf.stackexchange.com/questions/263135/print-this-diamond-gone-beautifully-wrong/274373#274373">bb94</a></td></tr>
 <tr d-ix="3"><td>057</td><td>Perl 5</td><td>240722T082434Z</td><td><a href="https://codegolf.stackexchange.com/questions/263135/print-this-diamond-gone-beautifully-wrong/274318#274318">Donat</a></td></tr>
@@ -55,13 +55,13 @@
 <tr d-ix="26"><td>156</td><td>Swift</td><td>230721T175718Z</td><td><a href="https://codegolf.stackexchange.com/questions/263135/print-this-diamond-gone-beautifully-wrong/263148#263148">Bbrk24</a></td></tr>
 <tr d-ix="27"><td>278</td><td>Vyxal</td><td>230721T162133Z</td><td><a href="https://codegolf.stackexchange.com/questions/263135/print-this-diamond-gone-beautifully-wrong/263137#263137">The Empt</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>R, 123 Bytes</h1>
-<pre><code>for(i in s&lt;-c(1:9,8:1))message(rep(&quot; &quot;,(i-6)*(i-5)),paste0(s[c(1:i,i:1-1)],collapse=paste0(rep(&quot; &quot;,abs(i-9)),collapse=&quot;&quot;)))
+<div id="pu0" class="pu"><h1>R, <del>123 Bytes</del> 113 bytes</h1>
+<pre><code>p=paste0;for(i in s&lt;-c(1:9,8:1))message(rep(&quot; &quot;,(i-6)*(i-5)),p(s[c(1:i,i:1-1)],p(rep(&quot; &quot;,abs(i-9)),collapse=&quot;&quot;)))
 </code></pre>
 <p><code>rep(&quot; &quot;,(i-6)*(i-5))</code> gives the trailing white spaces</p>
 <p><code>s[c(1:i,i:1-1)]</code> gives the numbers on each row</p>
 <p><code>rep(&quot; &quot;,abs(i-9)</code> gives the number of white space between each character</p>
-<p><a href="https://tio.run/##PcvBCsIwEIThVwk57ZQNmIPFBn0S8RDLVhaqDVnfP6agXubyz1dbW7ZK6vTl7BxmimniU4rAU8zyQ6hKIe88k4YRQ98jwCXbWw5k1x0oa4oh4sbztq65mFy@/Wfz3TqcOvw/vAfQ2gc" rel="nofollow noreferrer" title="R – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##NcpBCsIwEEbhq4Ss5i8JmIVioz2JuIhlWgaqHTLeP40LN2/x@GprOmmxL59uy15JnHyc3eNMKY/hmhPwZrOyMlVW8s4HknjB0HsGgpI9flaC5BQTnv38YXlZV2NX875tRY0n7wG0dgA" rel="nofollow noreferrer" title="R – Try It Online">Try it online!</a></p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://raku.org" rel="nofollow noreferrer">Raku (Perl 6) (rakudo)</a>, <s>68</s> 67 bytes</h1>
 <p>Port of <a href="https://codegolf.stackexchange.com/a/274318/14109">Donat’s Perl 5 solution</a>.</p>
