--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240725T215304Z
+"   /golfscore                                      20240725T220351Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/178984.html">Binary self-rotation                            : 0178984</a>
 <a href="q/263135.html">Print this diamond gone beautifully wrong       : 0263135</a>
 <a href="q/17305.html">Transpose a page of text                        : 0017305</a>
 <a href="q/122783.html">AlTeRnAtE tHe CaSe                              : 0122783</a>
