--- a/q/178984.html
+++ b/q/178984.html
@@ -38,6 +38,19 @@
 <pre><code>≡≡↻⊙≡⍜∩⍉≡↻:∩⬚0↻¯1⊙1⍜°⍉∩°⋯≡⊃⇌≡⇌.
 </code></pre>
 <p><a href="https://uiua.org/pad?src=0_12_0-dev_3__RiDihpAg4omh4omh4oa74oqZ4omh4o2c4oip4o2J4omh4oa7OuKIqeKsmjDihrvCrzHiipkx4o2cwrDijYniiKnCsOKLr-KJoeKKg-KHjOKJoeKHjC4KCkEg4oaQIFsKICBbWzEgMCAxXQogICBbMSAwIDBdXQoKICBbWzEgMCAxXQogICBbMCAxIDFdXQoKICBbWzAgMSAxXQogICBbMSAxIDFdXQoKICBbWzEgMSAwXQogICBbMSAxIDFdXQpdCkYgQQo=" rel="nofollow noreferrer">Try it out!</a></p>
+<p>Explanation:</p>
+<pre><code>⍜°⍉∩°⋯≡⊃⇌≡⇌.
+</code></pre>
+<p>Convert the rows and the columns to binary. <code>⋯</code> (bits) uses little-endian binary, so the rows and the columns have to be reversed first.</p>
+<pre><code>∩⬚0↻¯1⊙1
+</code></pre>
+<p>Rotate the array of the columns up by one and the array of the rows down by one, filling with zeroes instead of cycling.</p>
+<pre><code>⊙≡⍜∩⍉≡↻:
+</code></pre>
+<p>Rotate the columns.</p>
+<pre><code>≡≡↻
+</code></pre>
+<p>Rotate the rows.</p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://www.r-project.org/" rel="nofollow noreferrer">R</a>, <s>226</s> <s>216</s> 205 bytes</h1>
 
