--- a/q/274161.html
+++ b/q/274161.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>016</td><td>J</td><td>240726T014817Z</td><td><a href="https://codegolf.stackexchange.com/questions/274161/sorting-with-a-deque/274446#274446">Jonah</a></td></tr>
+<tr d-ix="0"><td>014</td><td>J</td><td>240726T014817Z</td><td><a href="https://codegolf.stackexchange.com/questions/274161/sorting-with-a-deque/274446#274446">Jonah</a></td></tr>
 <tr d-ix="1"><td>039</td><td>JavaScript ES6</td><td>240715T072756Z</td><td><a href="https://codegolf.stackexchange.com/questions/274161/sorting-with-a-deque/274171#274171">Arnauld</a></td></tr>
 <tr d-ix="2"><td>013</td><td>K ngn/k</td><td>240716T042010Z</td><td><a href="https://codegolf.stackexchange.com/questions/274161/sorting-with-a-deque/274192#274192">Bubbler</a></td></tr>
 <tr d-ix="3"><td>017</td><td>K ngn/k</td><td>240715T083943Z</td><td><a href="https://codegolf.stackexchange.com/questions/274161/sorting-with-a-deque/274175#274175">akamayu</a></td></tr>
@@ -43,10 +43,11 @@
 <tr d-ix="14"><td>008</td><td>Jelly</td><td>240715T003800Z</td><td><a href="https://codegolf.stackexchange.com/questions/274161/sorting-with-a-deque/274162#274162">Unrelate</a></td></tr>
 <tr d-ix="15"><td>009</td><td>Vyxal</td><td>240715T005148Z</td><td><a href="https://codegolf.stackexchange.com/questions/274161/sorting-with-a-deque/274163#274163">emanresu</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="http://jsoftware.com/" rel="nofollow noreferrer">J</a>, 16 bytes</h1>
-<pre><code>*/@(+.&amp;(=&gt;./\))-
+<div id="pu0" class="pu"><h1><a href="http://jsoftware.com/" rel="nofollow noreferrer">J</a>, <s>16</s> 14 bytes</h1>
+<pre><code>*/@:+&amp;(=&gt;./\)-
 </code></pre>
-<p><a href="https://tio.run/##y/qvpKeepmBrpaCuoKNgoGAFxLp6Cs5BPm7/tfQdNLT11DRs7fT0YzQ1df9rcqUmZ@QrqJcUlZZkVKpzQbhpCoZwho6CkY6CsY6CCUzEBMwFCiLUGOggYZgoSA9YnakOyBQzVP2mYCkzJFNMwepNwFLGMNIMogzqLvW0xJxiZFdCnIJkoyESF@5QdOciCaJ5DOIGiMtN/wMA" rel="nofollow noreferrer" title="J – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##y/qvpKeepmBrpaCuoKNgoGAFxLp6Cs5BPm7/tfQdrLTVNGzt9PRjNHX/a3KlJmfkK6iXFJWWZFSqc0G4aQqGcIaOgpGOgrGOgglMxATMBQoi1BjoIGGYKEgPWJ2pDsgUM1T9pmApMyRTTMHqTcBSxjDSDKIM6i71tMScYmRXQpyCZKMhEhfuUHTnIgmieQziBojLTf8DAA" rel="nofollow noreferrer" title="J – Try It Online">Try it online!</a></p>
+<p><em>-2 thanks to Bubbler!</em></p>
 <p>Based on <a href="https://codegolf.stackexchange.com/a/274175/15469">akamayu's idea</a>, but applies max-scan to both the input and its negation instead of applying max and min scans, which saves bytes in J vs APL.</p>
 </div>
 <div id="pu1" class="pu"><h1>JavaScript (ES6), 39 bytes</h1>
