--- a/q/274342.html
+++ b/q/274342.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>214</td><td>GNU C</td><td>240725T221756Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274444#274444">Knogger</a></td></tr>
+<tr d-ix="0"><td>208</td><td>GNU C</td><td>240725T221756Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274444#274444">Knogger</a></td></tr>
 <tr d-ix="1"><td>092</td><td>Zsh</td><td>240724T174928Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274418#274418">GammaFun</a></td></tr>
 <tr d-ix="2"><td>065</td><td>sed 4.2.2 E</td><td>240724T163625Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274414#274414">Jordan</a></td></tr>
 <tr d-ix="3"><td>087</td><td>Python</td><td>240724T043605Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274385#274385">Mukundan</a></td></tr>
@@ -41,10 +41,13 @@
 <tr d-ix="12"><td>053</td><td>Retina 0.8.2</td><td>240723T094301Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274346#274346">Neil</a></td></tr>
 <tr d-ix="13"><td>137</td><td>Python 3.8 prerelease</td><td>240723T091424Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274343#274343">Jitse</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.gnu.org/software/gnu-c-manual/gnu-c-manual.html" rel="nofollow noreferrer">GNU C</a>, 214 bytes</h1>
-<pre class="lang-c prettyprint-override"><code>char*c(char*s,char*i){char*r=malloc(strlen(s)),*z,o,t;r=strcpy(r,s);for(;*i;++i){z=strchr(r,'|');o=(*i==60&amp;&amp;z-r)?-1:(*i==62&amp;&amp;*(z+1))?1:0;t=*z;*z=*(z+o);*(z+o)=t;if(*i==35&amp;&amp;z-r)memmove(z-1,z,strlen(z)+1);}return r;}
+<div id="pu0" class="pu"><h1><a href="https://www.gnu.org/software/gnu-c-manual/gnu-c-manual.html" rel="nofollow noreferrer">GNU C</a>, <s>214</s> 208 bytes</h1>
+<ul>
+<li>-6 bytes by replacing all <code>*(x+y)</code> by <code>x[y]</code></li>
+</ul>
+<pre class="lang-c prettyprint-override"><code>char*c(char*s,char*i){char*r=malloc(strlen(s)),*z,o,t;r=strcpy(r,s);for(;*i;++i){z=strchr(r,'|');o=(*i==60&amp;&amp;z-r)?-1:(*i==62&amp;&amp;z[1])?1:0;t=*z;*z=z[o];z[o]=t;if(*i==35&amp;&amp;z-r)memmove(z-1,z,strlen(z)+1);}return r;}
 </code></pre>
-<p><a href="https://www.programiz.com/online-compiler/3kNfDNTPRAtTC" rel="nofollow noreferrer">Try on programiz.com</a></p>
+<p><a href="https://www.programiz.com/online-compiler/33a9kPKYfJEho" rel="nofollow noreferrer">Try it on programiz.com</a></p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://www.zsh.org/" rel="nofollow noreferrer">Zsh</a>, <s>103</s> 92 bytes</h1>
 <p>Saved <strong>11 bytes</strong> using <code>r[1]=</code> to remove the first character of <code>$r</code> and <code>l[-1]=</code> to remove the last character of <code>$l</code>.</p>
