--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240726T061301Z
+"   /golfscore                                      20240726T064144Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/274448.html">Factoriadic Fraction Addition                   : 0274448</a>
 <a href="q/274342.html">Simulate Text Cursor                            : 0274342</a>
 <a href="q/274161.html">Sorting with a deque                            : 0274161</a>
 <a href="q/274288.html">Compute Dickman                                 : 0274288</a>
