--- a/q/274448.html
+++ b/q/274448.html
@@ -26,13 +26,13 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>096</td><td>JavaScript Node.js</td><td>240726T064144Z</td><td><a href="https://codegolf.stackexchange.com/questions/274448/factoriadic-fraction-addition/274449#274449">l4m2</a></td></tr>
+<tr d-ix="0"><td>094</td><td>JavaScript Node.js</td><td>240726T064144Z</td><td><a href="https://codegolf.stackexchange.com/questions/274448/factoriadic-fraction-addition/274449#274449">l4m2</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 96 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 94 bytes</h1>
 
-<pre class="lang-javascript prettyprint-override"><code>f=([a=0,...A],[b=0,...B],i)=&gt;k=A+B||a|b?f(A,B,i+1||2)!=-(b=+c+a+b,c=b&gt;i,b+=c*~i)?[b,...k]:k:c=[]
+<pre class="lang-javascript prettyprint-override"><code>f=([a=0,...A],[b=c=0,...B],i)=&gt;k=A+B||a|b?f(A,B,i+1||2)!=-(b+=c+a,c=b&gt;i,b+=c*~i)?[b,...k]:k:[]
 </code></pre>
-<p><a href="https://tio.run/##dc3BCoMwDAbg@95it3ZNi/XoiKKvUXpoOh2dYmWOncpe3em2o4PwE/4Pkpt7utnfw/SQY7y0S4frMOMwA6VUbcHQd20sBI5lj7VoUnKJqo7V0EAQOqWcH1EyQuGFEwQeqQxAAv3pFXhlaDvQ26IvPBq7nA8@jnMcWjXEK@uYWb9YzndavVNnkK8i/9OWe6Z/qj@@vAE" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##dc1BCsMgEAXQfW/RndZRYpYpk2CuIS7UJsUmxNCUrqRXt0nbZQrDwP@PYW72aRd/D/ODT/HS5R7XIdpiAUIIZUA79N/QGggU6wEVa1OyyTU9UdBCYDKlkh6RE8fQMwseXR1gC6dXoI122/lgqqHSJp8PPk5LHDsxxivpiV5/GEp3WrlTF1Cuwv/TtvdM/lR@PL8B" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 <p><code>==-</code> if former is <code>[]</code> and latter is 0. Former is never negative and latter, including <code>-</code>, is never positive</p>
 </div>
 
