--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240726T073122Z
+"   /golfscore                                      20240726T075917Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/19938.html">Down the drain it goes                          : 0019938</a>
 <a href="q/274448.html">Factoriadic Fraction Addition                   : 0274448</a>
 <a href="q/131503.html">Is it a weak prime?                             : 0131503</a>
 <a href="q/274342.html">Simulate Text Cursor                            : 0274342</a>
