--- a/q/274448.html
+++ b/q/274448.html
@@ -26,9 +26,17 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>094</td><td>JavaScript Node.js</td><td>240726T064144Z</td><td><a href="https://codegolf.stackexchange.com/questions/274448/factoriadic-fraction-addition/274449#274449">l4m2</a></td></tr>
+<tr d-ix="0"><td>035</td><td>APLDyalog Unicode</td><td>240726T081812Z</td><td><a href="https://codegolf.stackexchange.com/questions/274448/factoriadic-fraction-addition/274451#274451">ovs</a></td></tr>
+<tr d-ix="1"><td>094</td><td>JavaScript Node.js</td><td>240726T064144Z</td><td><a href="https://codegolf.stackexchange.com/questions/274448/factoriadic-fraction-addition/274449#274449">l4m2</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 94 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://dyalog.com" rel="nofollow noreferrer">APL(Dyalog Unicode)</a>, <sup><s></s></sup>35 bytes <sup><a href="https://github.com/abrudz/SBCS" rel="nofollow noreferrer">SBCS</a></sup></h1>
+<p>Assumes index origin 0.</p>
+<pre><code>{x↓⍨-⊥⍨0=x←(⊢⊤⊥∘m)(⊢+2××)⍳≢m←+⌿↑⍺⍵}
+</code></pre>
+<p><a href="https://razetime.github.io/APLgolf/?h=e9Q31dP/UdsEAwA&amp;c=q6541Db5Ue8K3UddS4GUgS2QP0HjUdeiR11LQEIdM3I1QVxto8PTD0/XfNS7@VHnolygGu1HPfsftU181LvrUe/WWgA&amp;f=K3nUNqH6Ue@uR71bNYBUGpDWrOV61DbxUe8aBRDWMFAw0kSQhiC65NAKsJyhwqH1hqhyAA&amp;i=AwA&amp;r=tryapl&amp;l=apl-dyalog&amp;m=dfn&amp;n=f" rel="nofollow noreferrer">Try it on APLgolf!</a></p>
+<p>Add the inputs element-wise, convert back and forth using base <code>0 3 4 5 ...</code>, drop trailing zeros.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 94 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>f=([a=0,...A],[b=c=0,...B],i)=&gt;k=A+B||a|b?f(A,B,i+1||2)!=-(b+=c+a,c=b&gt;i,b+=c*~i)?[b,...k]:k:[]
 </code></pre>
