--- a/q/274448.html
+++ b/q/274448.html
@@ -26,17 +26,48 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>093</td><td>JavaScript Node.js</td><td>240726T064144Z</td><td><a href="https://codegolf.stackexchange.com/questions/274448/factoriadic-fraction-addition/274449#274449">l4m2</a></td></tr>
-<tr d-ix="1"><td>035</td><td>APLDyalog Unicode</td><td>240726T081812Z</td><td><a href="https://codegolf.stackexchange.com/questions/274448/factoriadic-fraction-addition/274451#274451">ovs</a></td></tr>
+<tr d-ix="0"><td>057</td><td>Charcoal</td><td>240726T083053Z</td><td><a href="https://codegolf.stackexchange.com/questions/274448/factoriadic-fraction-addition/274452#274452">Neil</a></td></tr>
+<tr d-ix="1"><td>093</td><td>JavaScript Node.js</td><td>240726T064144Z</td><td><a href="https://codegolf.stackexchange.com/questions/274448/factoriadic-fraction-addition/274449#274449">l4m2</a></td></tr>
+<tr d-ix="2"><td>035</td><td>APLDyalog Unicode</td><td>240726T081812Z</td><td><a href="https://codegolf.stackexchange.com/questions/274448/factoriadic-fraction-addition/274451#274451">ovs</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 93 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 57 bytes</h1>
+<pre><code>Ｆ⁻ＬηＬθ⊞θ⁰≔⁰ζＦ⮌Ｅηκ«≧⁺⁺§θι⊟ηζ§≔θι⎇ι﹪ζ⁺²ιζ≧÷⁺²ιζ»Ｗ∧θ¬↨θ⁰⊟θＩθ
+</code></pre>
+<p><a href="https://tio.run/##XVBNawMhFDxnf8U7PsFCmmtP2/YS6IYl9BZykKxdpaKJuts2Ib/dPjWU0IvMwHy88aCEPzhhUvpwHrDTdgr4Ju0YFSrG4QZPjDHop0CIw5I9NW0IerS45HAmVrxbOUsfJHbiiIrDZ7ZcmgXRKt7qUUXszRQ45BfbuLaD/M6Rmqp6Rz7GauKieu4lHN6lt8L/IMHODZNxeL5FrXJEsWbvv8q1ja961oO8F9eaa/OltJGArR1yycZFfBY0oswso722dDXddsrZlb6IEAtPabejP3jksNpz@IP79DCbXw" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Explanation:</p>
+<pre><code>Ｆ⁻ＬηＬθ⊞θ⁰
+</code></pre>
+<p>Extend the first input to the length of the second.</p>
+<pre><code>≔⁰ζ
+</code></pre>
+<p>Start with no carry.</p>
+<pre><code>Ｆ⮌Ｅηκ«
+</code></pre>
+<p>Enumerate the indices of the second array in reverse.</p>
+<pre><code>≧⁺⁺§θι⊟ηζ
+</code></pre>
+<p>Add the values in the two array elements to the carry.</p>
+<pre><code>§≔θι⎇ι﹪ζ⁺²ιζ
+</code></pre>
+<p>Update the output value, reducing modularly if necessary.</p>
+<pre><code>≧÷⁺²ιζ
+</code></pre>
+<p>Update the carry.</p>
+<pre><code>»Ｗ∧θ¬↨θ⁰⊟θ
+</code></pre>
+<p>Remove any trailing zeros.</p>
+<pre><code>Ｉθ
+</code></pre>
+<p>Output the final result.</p>
+<p>Bonus 136-byte <a href="https://github.com/m-ender/retina/wiki/The-Language/a950ad7d925ec9316e3e2fb2cf5d49fd15d23e3d" rel="nofollow noreferrer">Retina 0.8.2</a> solution: <a href="https://tio.run/##RY29DgIxDIN3P0WHgpK2VJey8jPyEL2cDgkGFgbEeO9e0i4ssT/Lij/P7@t9bzu6rU2RnGKuyaFifkT4gAVVjeNqN5METo5y6MBGyTG8@KNx9QU9hnWtcz2diRJvmSMbHMpFOIrQlQovDLGfvTPXzbEE@LyH7U4aFdpa36w6pquYTsmV7ocOlH8y7A8" rel="nofollow noreferrer" title="Retina 0.8.2 – Try It Online">Try it online!</a> Does not work with negative numbers.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 93 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>f=([a=0,...A],[b=c=0,...B],i)=&gt;k=A+B||a|b?f(A,B,i+1||2)!=-(b+=c+a,c=b&gt;i,b+=c*~i)?[b,...k]:k:A
 </code></pre>
 <p><a href="https://tio.run/##dc1BCsMgEAXQfW/RndaJxCxTJsFcQ1yojcUaYmhKV9Krp0nbZQrDwP@PYW7maWZ3D9OjGNOlXzyuQ5TBEjjnUoOy6L6h0xAoNhEl63I22baeSOggMJFzRY9YEMvQMQMObRNgC6dXoK2y23nUdazlcj64NM5p6PmQrsQTtb7QlO60YqcuoVql@E/b3jPxU/Hx5Q0" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 <p><code>==-</code> if former is <code>[]</code> and latter is 0. Former is never negative and latter, including <code>-</code>, is never positive</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://dyalog.com" rel="nofollow noreferrer">APL(Dyalog Unicode)</a>, <sup><s></s></sup>35 bytes <sup><a href="https://github.com/abrudz/SBCS" rel="nofollow noreferrer">SBCS</a></sup></h1>
+<div id="pu2" class="pu"><h1><a href="https://dyalog.com" rel="nofollow noreferrer">APL(Dyalog Unicode)</a>, <sup><s></s></sup>35 bytes <sup><a href="https://github.com/abrudz/SBCS" rel="nofollow noreferrer">SBCS</a></sup></h1>
 <p>Assumes index origin 0.</p>
 <pre><code>{x↓⍨-⊥⍨0=x←(⊢⊤⊥∘m)(⊢+2××)⍳≢m←+⌿↑⍺⍵}
 </code></pre>
