--- a/q/131503.html
+++ b/q/131503.html
@@ -26,8 +26,8 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>056</td><td>JavaScript Node.js</td><td>240726T083830Z</td><td><a href="https://codegolf.stackexchange.com/questions/131503/is-it-a-weak-prime/274453#274453">l4m2</a></td></tr>
-<tr d-ix="1"><td>077</td><td>R</td><td>240726T071436Z</td><td><a href="https://codegolf.stackexchange.com/questions/131503/is-it-a-weak-prime/274450#274450">int 21h </a></td></tr>
+<tr d-ix="0"><td>076</td><td>R</td><td>240726T071436Z</td><td><a href="https://codegolf.stackexchange.com/questions/131503/is-it-a-weak-prime/274450#274450">int 21h </a></td></tr>
+<tr d-ix="1"><td>056</td><td>JavaScript Node.js</td><td>240726T083830Z</td><td><a href="https://codegolf.stackexchange.com/questions/131503/is-it-a-weak-prime/274453#274453">l4m2</a></td></tr>
 <tr d-ix="2"><td>015</td><td>Husk</td><td>201010T162303Z</td><td><a href="https://codegolf.stackexchange.com/questions/131503/is-it-a-weak-prime/212274#212274">Razetime</a></td></tr>
 <tr d-ix="3"><td>047</td><td>Regex most flavors</td><td>190329T172858Z</td><td><a href="https://codegolf.stackexchange.com/questions/131503/is-it-a-weak-prime/182430#182430">Grimmy</a></td></tr>
 <tr d-ix="4"><td>081</td><td>Python 2</td><td>170904T043332Z</td><td><a href="https://codegolf.stackexchange.com/questions/131503/is-it-a-weak-prime/141514#141514">miles</a></td></tr>
@@ -52,19 +52,14 @@
 <tr d-ix="23"><td>009</td><td>Jelly</td><td>170708T164144Z</td><td><a href="https://codegolf.stackexchange.com/questions/131503/is-it-a-weak-prime/131506#131506">Erik the</a></td></tr>
 <tr d-ix="24"><td>024</td><td>Mathematica</td><td>170708T164123Z</td><td><a href="https://codegolf.stackexchange.com/questions/131503/is-it-a-weak-prime/131505#131505">Martin E</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 56 bytes</h1>
-
-<pre class="lang-javascript prettyprint-override"><code>f=(x,i=1)=&gt;P(e=x+i)?i&lt;0:f(x,(i&lt;0)-i)
-P=x=&gt;e%--x?P(x):x&lt;2
+<div id="pu0" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, <a href="https://ato.pxeger.com/run?1=LYxRCoJAFEW3Mn0I8-ANNKOlxUy0AVegBkMyqKhIKtpa-rEPF9VuemEfl3M5F-7r_VhWx7Rg6zg4EX3ilLc4G3Vubwpzk5fOcavFnDS26-onT3kF_djwXeV5M2iFM2QAeTJpMRXlveDWmBayCxkhs__pNbYdd1iX_cB9ZCEySZAnZIroS2QBMSB_pB5Sj36hXe6RHQC2n2XZ-AU" rel="nofollow noreferrer"><s>77</s></a> 76 bytes</h1>
+<ul>
+<li>-1 byte thanks to <a href="https://codegolf.stackexchange.com/users/64121/ovs">ovs</a></li>
+</ul>
+<pre class="lang-r prettyprint-override"><code>\(n,x=2:n^2,d=diff(a&lt;-x[mapply(\(j)sum(!j%%x)&lt;2,x)]))d[w&lt;-match(n,a)]&gt;d[w-1]
 </code></pre>
-<p><a href="https://tio.run/##FYpBCsIwEADvviIXIYsbMS0ilm77hdzFQ6mJpNSstCr7@5ieZhhmGn7DOi7x/TGJHz7nQFowkgXqnPYkhwh9bE9NKFkXARNh50io83tjpHdaoJG2yoEXpdP3pTioW4U1nvGC1qKt0Ra53kGNnFae/XHm53aiChsA8h8" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
-<p>Nothing</p>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, 77 bytes</h1>
-<pre class="lang-r prettyprint-override"><code>\(n,x=2:n^2,d=diff(a&lt;-x[mapply(\(j)sum(!j%%x)&lt;2,x)]))d[w&lt;-which(a==n)]&gt;d[w-1]
-</code></pre>
-<p><a href="https://ato.pxeger.com/run?1=LYxRCoJAFEW3Mn0I8-ANNKOlxUy0AVegBkMyqKhIKtpa-rEPF9VuemEfl3M5F-7r_VhWx7Rg6zg4EX3ilLc4G3Vubwpzk5fOcavFnDS26-onT3kF_djwXeV5M2iFM2QAeTJpMRXlveDWmBayCxkhs__pNbYdd1iX_cB9ZCEySZAnZIroS2QBMSB_pB5Sj36hXe6RHQC2n2XZ-AU" rel="nofollow noreferrer">Attempt This Online!</a></p>
-<p>Outputs <code>TRUE</code> for the weak primes, <code>FALSE</code> for the non-weak and a <code>logical(0)</code> for the composite numbers.</p>
+<p><a href="https://ato.pxeger.com/run?1=LYxRCoJAGISvsj0I-8O_0K6WFmt0gDqBGizJkqIiqbSdpZftwUN1m_6wh-EbZph5ve9-tkwLNk-jFcnnlPMOXar23UVhmZaVtdxo4bLW9H3z5DmvYZhavqqDwIFW6KAAKLOHFq0ZrzdaGygOFAhZ_D-PZ9Nzi001jDxEFiOTBLlDpoihRBYRI8q35GPyyU_UyzWyDcDy4_3CLw" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p>Outputs <code>TRUE</code> for the weak primes, <code>FALSE</code> for the non-weak and a <code>NA</code> for the composite numbers.</p>
 <p>Ungolfed and commented:</p>
 <pre><code>\(n){
 
@@ -82,12 +77,20 @@ a &lt;- x[m]
 d &lt;- diff(a)                    
 
 # find the position of n in the vector of the primes 
-w &lt;- which(a==n)                 
+w &lt;- match(n,a)                 
 
 # compare two differences
 d[w] &gt; d[w-1]                    
 }
 </code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 56 bytes</h1>
+
+<pre class="lang-javascript prettyprint-override"><code>f=(x,i=1)=&gt;P(e=x+i)?i&lt;0:f(x,(i&lt;0)-i)
+P=x=&gt;e%--x?P(x):x&lt;2
+</code></pre>
+<p><a href="https://tio.run/##FYpBCsIwEADvviIXIYsbMS0ilm77hdzFQ6mJpNSstCr7@5ieZhhmGn7DOi7x/TGJHz7nQFowkgXqnPYkhwh9bE9NKFkXARNh50io83tjpHdaoJG2yoEXpdP3pTioW4U1nvGC1qKt0Ra53kGNnFae/XHm53aiChsA8h8" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+<p>Nothing</p>
 </div>
 <div id="pu2" class="pu"><h1><a href="https://github.com/barbuz/Husk" rel="nofollow noreferrer">Husk</a>, 15 bytes</h1>
 <pre><code>&gt;D¹Σ§e₁←₁→
